fix:完善上传和编辑词条的API

--- a/GeneralWiki/appsettings.json
+++ b/GeneralWiki/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WikiContext": ""
+    "WikiContext": "Host=localhost;Database=mywiki;Username=ouyangguiping;Password=123456;Include Error Detail=true;"
   }
 }
