fix:修改图片返回路径

--- a/GeneralWiki/appsettings.json
+++ b/GeneralWiki/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WikiContext": "Host=localhost;Database=mywiki;Username=ouyangguiping;Password=123456;Include Error Detail=true;",
+    "WikiContext": "Host=localhost;Database=generalwiki;Username=ouyangguiping;Password=123456;Include Error Detail=true;",
     "ShirasagiContext": "Host=shirasagi.space;Port=5433;Database=SastWiki;Username=postgres;Password=SastWiki"
   }
 }
